# cosmic-workspaces-epoch

./: .gitignore  Cargo.toml  Makefile  flake.nix
data/: com.system76.CosmicWorkspaces.desktop
debian/: changelog  control
i18n/ar/: cosmic_workspaces.ftl
i18n/be/: cosmic_workspaces.ftl
i18n/bg/: cosmic_workspaces.ftl
i18n/cs/: cosmic_workspaces.ftl
i18n/de/: cosmic_workspaces.ftl
i18n/dk/: cosmic_workspaces.ftl
i18n/el/: cosmic_workspaces.ftl
i18n/en/: cosmic_workspaces.ftl
i18n/es/: cosmic_workspaces.ftl
i18n/es-419/: cosmic_workspaces.ftl
i18n/et/: cosmic_workspaces.ftl
i18n/fi/: cosmic_workspaces.ftl
i18n/fr/: cosmic_workspaces.ftl
i18n/ga/: cosmic_workspaces.ftl
i18n/hi/: cosmic_workspaces.ftl
i18n/hu/: cosmic_workspaces.ftl
i18n/id/: cosmic_workspaces.ftl
i18n/is/: cosmic_workspaces.ftl
i18n/it/: cosmic_workspaces.ftl
i18n/ja/: cosmic_workspaces.ftl
i18n/kab/: cosmic_workspaces.ftl
i18n/kk/: cosmic_workspaces.ftl
i18n/kn/: cosmic_workspaces.ftl
i18n/ko/: cosmic_workspaces.ftl
i18n/lt/: cosmic_workspaces.ftl
i18n/nl/: cosmic_workspaces.ftl
i18n/nn/: cosmic_workspaces.ftl
i18n/pa/: cosmic_workspaces.ftl
i18n/pl/: cosmic_workspaces.ftl
i18n/pt/: cosmic_workspaces.ftl
i18n/pt-BR/: cosmic_workspaces.ftl
i18n/ro/: cosmic_workspaces.ftl
i18n/ru/: cosmic_workspaces.ftl
i18n/sk/: cosmic_workspaces.ftl
i18n/sr/: cosmic_workspaces.ftl
i18n/sr-Cyrl/: cosmic_workspaces.ftl
i18n/sr-Latn/: cosmic_workspaces.ftl
i18n/sv/: cosmic_workspaces.ftl
i18n/ta/: cosmic-workspaces.ftl  cosmic_workspaces.ftl
i18n/tr/: cosmic_workspaces.ftl
i18n/uk/: cosmic_workspaces.ftl
i18n/zh-CN/: cosmic_workspaces.ftl
i18n/zh-TW/: cosmic_workspaces.ftl
src/: animation.rs  dbus.rs  desktop_info.rs  dnd.rs  localize.rs  main.rs  mpsc.rs  toggle_dbus.rs  utils.rs  wayland.rs
src/backend/: mock.rs  mod.rs
src/backend/wayland/: buffer.rs  capture.rs  dmabuf.rs  mod.rs  screencopy.rs  toplevel.rs  vulkan.rs  workspace.rs
src/view/: mod.rs
src/wayland/: buffer.rs  capture.rs  dmabuf.rs  mod.rs  screencopy.rs  toplevel.rs  workspace.rs
src/widgets/: image_bg.rs  match_size.rs  mod.rs  mouse_interaction_wrapper.rs  size_cross_nth.rs  toplevel_item.rs  toplevels.rs  visibility_wrapper.rs  workspace_bar.rs  workspace_item.rs
src/widgets/toplevels/: mod.rs
src/widgets/toplevels/toplevel_layout/: axis_toplevel_layout.rs  mod.rs  row_col_toplevel_layout.rs  two_row_col_toplevel_layout.rs  utils.rs
