[package]
name = "cosmic-workspaces"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
calloop = { version = "0.14.2", features = ["executor"] }
clap = { version = "4", features = ["derive"] }
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
env_logger = "0.11.0"
futures-channel = "0.3.25"
gbm = "0.18.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = ["tokio", "wayland", "single-instance", "multi-window", "winit"] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
freedesktop-desktop-entry = "0.7.0"
freedesktop-icons = "0.2.4"

memmap2 = "0.9.0"
tokio = "1.23.0"
wayland-protocols = "0.32.1"
zbus = { version = "4.0.0", default-features = false, features = ["tokio"] }
delegate = "0.13.0"
itertools = "0.14.0"
log = "0.4.20"
i18n-embed-fl = "0.9.0"
rust-embed = "8.1.0"
rustix = { version = "0.38.30", features  = ["fs"] }
calloop-wayland-source = "0.4.0"
aliasable = "0.1.3"

[dependencies.i18n-embed]
version = "0.15.3"
features = ["fluent-system", "desktop-requester"]

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]
# Debugging features
force-shm-screencopy = []
no-subsurfaces = ["force-shm-screencopy"]
mock-backend = []

[profile.dev]
# Not usable at opt-level 0, at least with software renderer
opt-level = 1

[patch."https://github.com/pop-os/cosmic-protocols"]
cosmic-protocols = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "workspace-v2-pin-move" }
cosmic-client-toolkit = { git = "https://github.com/pop-os/cosmic-protocols//", branch = "workspace-v2-pin-move" }
