[package]
name = "cosmic-workspaces"
version = "1.0.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
calloop = { version = "0.14.4", features = ["executor"] }
clap = { version = "4", features = ["derive"] }
cosmic-bg-config = { git = "https://github.com/pop-os/cosmic-bg" }
cosmic-comp-config = { git = "https://github.com/pop-os/cosmic-comp" }
env_logger = "0.11.9"
gbm = "0.18.0"
libcosmic = { git = "https://github.com/pop-os/libcosmic", default-features = false, features = [
    "tokio",
    "wayland",
    "single-instance",
    "desktop",
    "multi-window",
    "winit",
] }
cosmic-config = { git = "https://github.com/pop-os/libcosmic" }
freedesktop-icons = { package = "cosmic-freedesktop-icons", git = "https://github.com/pop-os/freedesktop-icons" }

memmap2 = "0.9.10"
tokio = "1.49.0"
wayland-protocols = "0.32.10"
delegate = "0.13.5"
itertools = "0.14.0"
log = "0.4.29"
i18n-embed-fl = "0.10"
rust-embed = "8.11.0"
rustix = { version = "1.1.3", features = ["fs", "shm"] }
calloop-wayland-source = "0.4.1"
aliasable = "0.1.3"
zbus = "5.13.2"
tokio-stream = { version = "0.1.18", features = ["sync"] }
ash = { version = "0.38.0", features = ["loaded"] }
bytemuck = "1.25.0"
cosmic-panel-config = { git = "https://github.com/pop-os/cosmic-panel" }

[dependencies.i18n-embed]
version = "0.16"
features = ["fluent-system", "desktop-requester"]

[features]
default = ["wgpu"]
wgpu = ["libcosmic/wgpu"]
# Debugging features
force-shm-screencopy = []
no-subsurfaces = ["force-shm-screencopy"]
mock-backend = []

[profile.dev]
# Not usable at opt-level 0, at least with software renderer
opt-level = 1
